Improved numeric literals: -Added support for 0xXX literals. -Added support for XX_XX_...L literals.
Fixed error messages for primitive types, now every error message uses the name of the type used in code instead of the canonical name.

Changed from single file based to support also project files with nebc ProjectName.nebproj

Fixed name mangling to fix main() method (program's entry point) resolution

Fixed nebula_runtime.cpp int64 toString method's formatting